[tool.poetry]
name = "westac-sou-binder"
version = "0.2.0"
description = "Temamodellering av Statens Offentliga Utredningar."
authors = ["aibakeneko <aibakeneko@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
humlab-penelope = "^0.7.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
